# UniMath

./: coq-unimath.opam
UniMath/Algebra/: Archimedean.v  BinaryOperations.v  IteratedBinaryOperations.v
UniMath/Algebra/GaussianElimination/: Corollaries.v  Elimination.v  Matrices.v
UniMath/Algebra/Modules/: Quotient.v
UniMath/Algebra/Universal/: Equations.v  FreeAlgebras.v  Terms.v
UniMath/Algebra/Universal/Examples/: Tests.v
UniMath/AlgebraicGeometry/: Spec.v
UniMath/CategoryTheory/: Additive.v  NNO.v  PrecompEquivalence.v  Subobjects.v
UniMath/CategoryTheory/Adjunctions/: Restriction.v
UniMath/CategoryTheory/Core/: Categories.v
UniMath/CategoryTheory/DoubleCategories/Core/: DoubleCategories.v
UniMath/CategoryTheory/Equivalences/: Core.v
UniMath/CategoryTheory/ExactCategories/: ExactCategories.v
UniMath/CategoryTheory/Monads/: RelativeMonads.v
UniMath/Combinatorics/: DecSet.v  FiniteSequences.v  FiniteSets.v  OrderedSets.v  StandardFiniteSets.v  WellOrderedSets.v  ZFstructures.v
UniMath/Folds/: folds_isomorphism.v  folds_pre_2_cat.v  folds_precat.v
UniMath/Foundations/: HLevels.v  PartA.v  PartB.v  Preamble.v  Propositions.v  Sets.v
UniMath/MoreFoundations/: AxiomOfChoice.v  DecidablePropositions.v  NegativePropositions.v  NoInjectivePairing.v  Orders.v  PartA.v  Propositions.v  Sets.v  Subtypes.v
UniMath/NumberSystems/: Integers.v
UniMath/OrderTheory/DCPOs/Basis/: Algebraic.v  (+3 more)
UniMath/OrderTheory/Lattice/: Lattice.v
UniMath/OrderTheory/Posets/: QuotientPoset.v
UniMath/RealNumbers/: Sets.v
UniMath/Topology/: Filters.v  Topology.v
(+15 files in other folders)
